auth +reset +crud